# predTED

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  setup.py  train_rich_model.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: run_benchmark.py  speed_benchmark.ipynb
c_src/: _features_module.c  predTED.c  predTED.h  predTED.i  predTED.py  predted_features.c  predted_features.h  setup_swig.py
data/: generate_train_data.py  structures.txt
predted/: __init__.py  features.py  model.txt
recipes/predted/: meta.yaml
recipes/predted-cli/: meta.yaml
testing/: Validate_model.ipynb  predTED_vs_trueTED_by5.csv
tests/: test_cli.py  test_features.py  test_predict.py
utils/: features.py
weights/: best_params.json  best_params_xgb.json  compute_feature_importances.py  compute_feature_weights_linear_regression.py  feature_importances.json  feature_weights.json  results_summary.json  results_summary_rich.json
